--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Login page</title>
         <link rel="stylesheet" type="text/css" href="login.css">
+        <script src='https://code.jquery.com/jquery-3.4.1.min.js'></script>
     </head>
     <body>
         <div class="login-box">
@@ -22,6 +23,12 @@
             </form>
             </div>
         </div>
+
+        <script>
+        $('.message a').click(function(){
+            $('form').animate({height: "toggle", opacity: "toggle"}, "slow")
+        });
+        </script>
 
     </body>
 </html>
